Fixed Alignement Issues

--- a/css/style.css
+++ b/css/style.css
@@ -85,11 +85,10 @@
 }
 
 .image-grid {
-  display: inline-flex;
+  display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: center;
-  width: 1000px;
+  align-items: center;
 }
 
 .grid-item {
